lang transcript
